--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,15 +7,16 @@ on:
         tags:
             - '*'
     pull_request:
-    
+
 jobs:
     tests:
+        name: Unit tests
         runs-on: ${{ matrix.os }}
         strategy:
-        fail-fast: true
-        matrix:
-            os: [ubuntu-latest]
-            python-version: [3.10, 3.11]
+          fail-fast: true
+          matrix:
+              os: [ubuntu-latest]
+              python-version: [3.10, 3.11]
         steps:
             - uses: actions/checkout@v4
             - name: Set up Python ${{ matrix.python-version }}
