--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,7 @@ jobs:
           fail-fast: true
           matrix:
               os: [ubuntu-latest]
-              python-version: [3.10, 3.11]
+              python-version: ["3.10", "3.11"]
         steps:
             - uses: actions/checkout@v4
             - name: Set up Python ${{ matrix.python-version }}
@@ -26,8 +26,7 @@ jobs:
             - name: Install dependencies
               run: |
                 python -m pip install --upgrade pip wheel
-                pip install -r requirements.txt
-                pip installe -e .
+                pip install -e .
             - name: Test with pytest
               run: |
                 pip install pytest
